[metadata]
name = gsheets-plaid
version = attr: gsheets_plaid.__version__
author = Evan Smith
author_email = evanphilipsmith@gmail.com
description = Tool for syncing bank transaction data to Google Sheets with Plaid.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evanphilipsmith/gsheets-plaid
project_urls =
    Bug Tracker = https://github.com/evanphilipsmith/gsheets-plaid/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Spreadsheet
    Topic :: Utilities
keywords = google sheets gsheets plaid transactions banking

[options]
packages = find:
python_requires = >=3.10
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    pandas
    plaid-python
    python-dotenv
    flask
    google-cloud-firestore
    google-cloud-secret-manager

[options.packages.find]
exclude =
    build*
    dist*
    docs*
    tests*
